Fixed some spacing on About page

--- a/assets/_sass/site.scss
+++ b/assets/_sass/site.scss
@@ -373,11 +373,11 @@ h2.inside-the-issue{
 }
 .container-wrap--green{
   background-color: $green;
-  padding-top: 60px;
+  padding: 48px 0 12px;
 }
 .container-wrap--blue{
   background-color: $blue;
-  padding-top: 60px;
+  padding: 48px 0 12px;
 }
 // Issue carousel
 ol.carousel-indicators{
